styles(About): fix image z-index

--- a/src/page-components/About/About.styles.css
+++ b/src/page-components/About/About.styles.css
@@ -4,7 +4,6 @@
     max-width: 380px;
     min-width: 380px;
     margin: 30px;
-    z-index: 30;
 
     @media (max-width: 1023px) {
         height: 300px;
